# oak-examples

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  P8_PREDICTION_PROJECT.md  README.md
.github/workflows/: ci.yaml  publish_oakapp.yaml  tests.yml  tests_diff.yml
apps/: README.md
apps/conference-demos/: README.md
apps/data-collection/: .oakappignore  README.md  backend-run.sh  oakapp.toml
apps/default-app/: README.md  main.py  oakapp.toml  requirements.txt
apps/dino-tracking/: README.md  oakapp.toml
apps/focused-vision/: README.md  oakapp.toml
apps/p2p-measurement/: .gitignore  README.md  backend-run.sh  oakapp.toml  package-lock.json
apps/people-demographics-and-sentiment-analysis/: README.md  backend-run.sh  oakapp.toml
apps/people_demographics_sentiment_analysis/: .gitignore  README.md  oakapp.toml
apps/ros/ros-driver-custom-workspace/src/dai_ros_plugins/: CMakeLists.txt  plugins.xml
apps/ros/ros-driver-custom-workspace/src/dai_ros_plugins/include/dai_ros_plugins/: dai_ros_plugins.hpp
apps/ros/ros-driver-custom-workspace/src/dai_ros_plugins/src/: dai_ros_plugins.cpp
apps/ros/ros_driver_custom_workspace/src/dai_ros_plugins/: package.xml
apps/ros/ros_driver_custom_workspace/src/dai_ros_plugins/include/dai_ros_plugins/: visibility_control.h
camera-controls/: README.md
camera-controls/depth-driven-focus/: README.md  main.py  oakapp.toml
camera-controls/lossless-zooming/: main.py  oakapp.toml
camera-controls/manual-camera-control/: main.py  oakapp.toml  requirements.txt
cpp/: README.md
cpp/camera_stream/: .oakappignore  CMakeLists.txt  README.md  backend-run.sh  oakapp.toml
cpp/camera_stream/src/: main.cpp
cpp/uvc/: .oakappignore  CMakeLists.txt  LICENSE  README.md  oakapp.toml  uvc-start.sh
cpp/uvc/src/: uvc_example.cpp  uvc_example.hpp
cpp/uvc/uvc-gadget/: README.md
cpp/uvc/uvc-gadget/include/uvcgadget/: depthai-source.h
custom-frontend/: GETTING_STARTED.md  README.md
custom-frontend/open-vocabulary-object-detection/: .gitignore  README.md  oakapp.toml
custom-frontend/raw-stream/: .oakappignore  README.md  main.py  oakapp.toml
depth-measurement/: README.md
depth-measurement/calc-spatial-on-host/: oakapp.toml
depth-measurement/dynamic-calibration/: .oakappignore  README.md  main.py  oakapp.toml  requirements.txt
depth-measurement/stereo-on-host/: oakapp.toml  requirements.txt
depth-measurement/stereo-runtime-configuration/: oakapp.toml  requirements.txt
depth-measurement/triangulation/: main.py  oakapp.toml  requirements.txt
depth-measurement/wls-filter/: oakapp.toml  requirements.txt
integrations/: README.md
integrations/foxglove/: oakapp.toml  requirements.txt
integrations/hub-snaps-events/: main.py  oakapp.toml  requirements.txt
integrations/rerun/: oakapp.toml  requirements.txt
integrations/roboflow-dataset/: README.md  main.py  oakapp.toml
integrations/roboflow-integration/: README.md  main.py  oakapp.toml  requirements.txt
integrations/roboflow-workflow/: .oakappignore  README.md  backend-run.sh  oakapp.toml
neural-networks/: README.md
neural-networks/generic-example/: main.py
performant_PoCs/focused-vision/: .oakappignore  main.py  (+3 more)
streaming/: README.md
tests/: Dockerfile_peripheral  Dockerfile_standalone  README.md  conftest.py  constants.py  requirements.txt  run_tests_peripheral.cmd  run_tests_peripheral.sh  run_tests_standalone.cmd  run_tests_standalone.sh  test_examples_peripheral.py  test_examples_standalone.py  utils.py
tutorials/: README.md
(+697 files in other folders)
