<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>dai_ros_plugins</name>
    <version>0.0.0</version>
    <description>Example plugins for DepthAI ROS Driver</description>
    <maintainer email="adam.serafin@luxonis.com">Adam Serafin</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake_ros</buildtool_depend>

    <depend>depthai_ros_driver</depend>
    <depend>rclcpp</depend>
    <depend>pluginlib</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
